# eeprom-programmer

./: .gitmodules  README.md
eeprom-cli/: Cargo.toml
eeprom-cli/src/: error.rs  main.rs  serial_io.rs  variant.rs
eeprom-firmware/: eeprom-24lcxx.cpp  eeprom-24lcxx.h  eeprom-at28c64.cpp  eeprom-at28c64.h  eeprom-firmware.ino  eeprom-io.h
hardware/: EEPROM Programmer.kicad_pcb  EEPROM Programmer.kicad_pro  EEPROM Programmer.kicad_sch  fp-lib-table  sym-lib-table
hardware/aries_zif/: 28-6553-10_.dcm  28-6553-10_.kicad_sym  28-6553-10_.lib  28-6553-10_.mod  28655310.kicad_mod
